// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Toggle /> snapshot should match snapshot 1`] = `
<Toggle
  aria-label="toggle"
>
  <input
    aria-checked={false}
    aria-label="toggle"
    checked={false}
    className="md-toggle-switch md-toggle-off"
    data-disabled={false}
    data-selected={false}
    disabled={false}
    onChange={[Function]}
    onClick={[Function]}
    onDragStart={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchCancel={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role="switch"
    type="checkbox"
  />
</Toggle>
`;

exports[`<Toggle /> snapshot should match snapshot with className 1`] = `
<Toggle
  aria-label="toggle"
  className="example-class"
>
  <input
    aria-checked={false}
    aria-label="toggle"
    checked={false}
    className="md-toggle-switch example-class md-toggle-off"
    data-disabled={false}
    data-selected={false}
    disabled={false}
    onChange={[Function]}
    onClick={[Function]}
    onDragStart={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchCancel={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role="switch"
    type="checkbox"
  />
</Toggle>
`;

exports[`<Toggle /> snapshot should match snapshot with disabled 1`] = `
<Toggle
  aria-label="toggle"
  isDisabled={true}
>
  <input
    aria-checked={false}
    aria-label="toggle"
    checked={false}
    className="md-toggle-switch md-toggle-off"
    data-disabled={true}
    data-selected={false}
    disabled={true}
    onChange={[Function]}
    onClick={[Function]}
    onDragStart={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchCancel={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role="switch"
    type="checkbox"
  />
</Toggle>
`;

exports[`<Toggle /> snapshot should match snapshot with id 1`] = `
<Toggle
  aria-label="toggle"
  id="example-id"
>
  <input
    aria-checked={false}
    aria-label="toggle"
    checked={false}
    className="md-toggle-switch md-toggle-off"
    data-disabled={false}
    data-selected={false}
    disabled={false}
    id="example-id"
    onChange={[Function]}
    onClick={[Function]}
    onDragStart={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchCancel={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role="switch"
    type="checkbox"
  />
</Toggle>
`;

exports[`<Toggle /> snapshot should match snapshot with selected 1`] = `
<Toggle
  aria-label="toggle"
  defaultSelected={true}
>
  <input
    aria-checked={true}
    aria-label="toggle"
    checked={true}
    className="md-toggle-switch md-toggle-on"
    data-disabled={false}
    data-selected={true}
    disabled={false}
    onChange={[Function]}
    onClick={[Function]}
    onDragStart={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchCancel={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role="switch"
    type="checkbox"
  />
</Toggle>
`;

exports[`<Toggle /> snapshot should match snapshot with style 1`] = `
<Toggle
  aria-label="toggle"
  style={
    Object {
      "color": "pink",
    }
  }
>
  <input
    aria-checked={false}
    aria-label="toggle"
    checked={false}
    className="md-toggle-switch md-toggle-off"
    data-disabled={false}
    data-selected={false}
    disabled={false}
    onChange={[Function]}
    onClick={[Function]}
    onDragStart={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchCancel={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role="switch"
    style={
      Object {
        "color": "pink",
      }
    }
    type="checkbox"
  />
</Toggle>
`;
